fixes for undo / redo and starlark
